<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SecondFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTempInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="Enter your temperature:" />

            <EditText
                android:id="@+id/txtTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Temperature"
                android:inputType="numberDecimal" />

            <View
                android:id="@+id/divider_temp_date"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/txtDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="Enter the date:" />

            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:calendarViewShown="false"
                android:spinnersShown="false" />

            <View
                android:id="@+id/divider_date_time"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/txtTimeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="Enter the time:" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:id="@+id/divider_time_feeling"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/txtFeelingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:text="Choose how you're feeling from 1 to 10:" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:max="9"
                android:progress="1"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"/>

            <TextView
                android:id="@+id/txtCurrentFeelingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>